--- a/makefile_libmsocket
+++ b/makefile_libmsocket
@@ -4,7 +4,7 @@ libmsocket.a: msocket.o
 	ar rcs libmsocket.a msocket.o
 
 msocket.o: msocket.c msocket.h
-	gcc -Wall -Wextra -std=c11 -c msocket.c -o msocket.o
+	gcc -Wall -c msocket.c -o msocket.o
 
 clean:
 	rm -f libmsocket.a msocket.o
